			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2831 2006/09/04 07:13:12 suz Exp $

<200609>
2006-09-04  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/{in6_msf.c, mldv2.c}: fixed several bugs regarding
	  MLDv2 (suggested by Yu-Jung Lee)
	  - returns an error code when the MSF state change fails due to a
	    lack of memory
	  - fixed a bug that an MLDv2 State-Change Report is not always
	    advertised robustness-variables times.
	  - MLDv1-compat-timer properly checks the current compat-timer
	    status

<200608>
2006-08-29  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet/icmp6.h: use ifdef for IGMPv3/MLDv2-related state
	macros to prevent a macro duplication in userland applications.
	(suggested by Hitoshi Asaeda)

<200607>
2006-07-11  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet/in_msf.c: fixed a bug that MSF advanced-API
	is rejected in case of IPv4.
	* kame/sys/netinet/igmp.c: fixed a kernel crash in freebsd5 when
	MSF advanced-API is used in a kernel with IGMPV3 option on.

<200606>
2006-06-09  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/kame/shisad: RFC4285 on home agnets is implemented.
	
<200604>
2006-04-23  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/nd6.c (nd6_is_addr_neighbor): disabled the
	on-link assumption from the determination logic.

2006-04-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/ip6_mroute.c (ip6_mrouter_done): used
	if_allmulti(0) for diabling the multicast promiscuous mode for
	FreeBSD.  Without this change, an IPv6 multicast router would
	leave interfaces in the promiscuous mode even after the routing
	daemon terminates.

2006-04-02  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c: fixed a bug that an MLDv2 IS-IN Report
	is not advertised for an MLDv2 general Query

<200603>
2006-03-28  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/ip6_output.c: fixed a kernel crash by an ASM
	join from a userland application (KAME PR sys/932)
