@@ -1,7 +1,12 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2831 2006/09/04 07:13:12 suz Exp $
+$KAME: CHANGELOG,v 1.2832 2006/09/05 04:25:48 suz Exp $
 
 <200609>
+2006-09-05  SUZUKI, Shinsuke <suz@alaxala.net>
+	* kame/sys/netinet/in_msf.c, kame/sys/netinet6/in6_msf.c:
+	does not search MSF by 'fmode' in case of SIOCGMSFILTER or SIOCGIPMSFILTER.
+	(RFC3768 5.1.2 and 5.2.2)
+
 2006-09-04  SUZUKI, Shinsuke <suz@alaxala.net>
 	* kame/sys/netinet6/{in6_msf.c, mldv2.c}: fixed several bugs regarding
 	  MLDv2 (suggested by Yu-Jung Lee)
